Resolves: tdf#121942 action deactivated twice

Change-Id: I25b1ed89b8d0e7a7c0e36c621a43644bc2b4aa7b
Reviewed-on: https://gerrit.libreoffice.org/64708
Tested-by: Jenkins
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>
(cherry picked from commit f820f6eb6036197bbb53e2d5e4bf4d5341ad280d)